--- a/package.json
+++ b/package.json
@@ -20,31 +20,33 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
     "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@hot-loader/react-dom": "^16.12.0+4.12.19",
-    "webpack-dev-server": "^3.10.3",
-    "css-loader": "^3.4.2",
-    "style-loader": "^1.1.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-template": "^6.2.0",
-    "sass-loader": "^8.0.2",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "^3.0.0",
     "autoprefixer": "^9.7.4",
-    "file-loader": "^5.1.0",
-    "url-loader": "^3.0.0",
-    "lodash-webpack-plugin": "^0.11.5",
-    "prettier": "^1.19.1",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.19.1",
+    "react-router-dom": "^5.1.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
