--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "nouislider-react": "^3.3.7",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "react-router-dom": "^5.1.2",
