--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "lodash": "^4.17.15",
+    "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-breadcrumbs": "^2.1.7",
+    "react-breadcrumbs-dynamic": "^1.2.1",
     "react-dom": "^16.13.0",
-    "react-hot-loader": "^4.12.19"
+    "react-hot-loader": "^4.12.19",
+    "react-through": "^1.1.4",
+    "reactstrap": "^8.4.1",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
