--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
     "lodash": "^4.17.15",
     "material-ui-icons": "^1.0.0-beta.36",
